venv creado y requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,1 @@
-pygame
-sklearn
-numpy
-matplotlib
-pandas
-scipy
-seaborn
-scikit-image
-opencv-python
-opencv-python-headless
-tensorflow
-tensorflow-addons
-tensorflow-datasets
-tensorflow-hub
-tensorflow-io
-tensorflow-privacy
-tensorflow-probability
-tensorflow-text
-tensorflow-model-optimization
-tensorflow-quantum
-tensorflow-io-gcs-filesystem
-tensorflow-serving-api
-tensorflow-estimator
-tensorflow-addons
-tensorflow-datasets
+pygame==2.6.1
